...
    <string name="action_playPodacst">Play Podcast</string>
    <string name="action_removePodcast">Remove Podcast Media</string>
    <string name="action_openInBrowser">Open in Web browser</string>
    <string name="action_Share">Share</string>
    <string name="action_login">Server Settings</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync_settings">Sync Settings</string>
    <string name="action_add_new_feed">Add new feed</string>
    <string name="action_add_new_folder">Add new folder</string>
    <string name="action_textToSpeech">Read out</string>
    <string name="action_search">Search</string>
    <string name="action_download_articles_offline">Download articles offline</string>
    <string name="news_list_drawer_text" translatable="false">Feed-list</string>



    <!-- notifications -->
    <string name="notification_download_articles_offline">Downloading articles for offline usage</string>
    <string name="notification_download_images_offline">Downloading images for offline usage</string>
...
    <string name="pref_news_policy_summary">Nextcloud News Android News Policy / Contact Us</string>
    <string name="pref_version">Nextcloud News Android app</string>


    <!-- Settings for Display -->
    <string name="pref_header_display">Display</string>
    <string name="pref_title_app_theme">Theme</string>
    <string name="pref_title_feed_list_layout">Feed list layout</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_display_browser">Browser</string>


    <string name="pref_display_news_detail_actionbar_icons_title">Action icons (Detail View)</string>
...
        <item>podcast</item>
        <!-- <item>tts</item> -->
    </string-array>
    <string-array name="pref_display_news_detail_actionbar_icons_default_values" translatable="false"></string-array>


    <string name="pref_display_apptheme_auto">System Default</string>
    <string name="pref_display_apptheme_light">Light</string>
    <string name="pref_display_apptheme_dark">Dark</string>

    <string-array name="pref_display_apptheme" translatable="false">
        <item>@string/pref_display_apptheme_auto</item>
        <item>@string/pref_display_apptheme_light</item>
        <item>@string/pref_display_apptheme_dark</item>
    </string-array>
    <string-array name="pref_display_apptheme_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_oled_mode">Black background</string>
    <string name="pref_oled_mode_summary">For dark theme on OLED screens</string>

    <string name="pref_detailed_view_zoom">Detailed view zoom</string>
    <string name="pref_detailed_view_zoom_summary">Enable zooming the content in the detailed view</string>

    <string name="pref_external_player">External Player</string>
...
    <string name="content_desc_play">Play</string>
    <string name="content_desc_pause">Pause</string>
    <string name="content_desc_playback_speed">Playback speed</string>
    <string name="content_desc_rewind">Rewind</string>
    <string name="content_desc_forward">Forward</string>
    <string name="content_desc_expand">Expand</string>
    <string name="content_desc_collapse">Collapse</string>
    <string name="content_desc_mark_as_read">Mark as read</string>
    <string name="content_desc_mark_as_unread">Mark as unread</string>
    <string name="content_desc_tap_to_refresh">Tap to refresh</string>
    <string name="content_desc_add_to_favorites">Add to favorites</string>
    <string name="content_desc_remove_from_favorites">Remove from favorites</string>
    <string name="content_desc_show_password">Show password</string>
    <string name="content_desc_delete">Delete</string>
    <string name="content_desc_download">Download</string>

...
