...

    <item android:id="@+id/menu_update"
        android:title="@string/menu_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_24dp_theme_aware"
        android:iconifiedByDefault="false"
        android:title="@string/action_search"
        android:visible="true"
        app:tint="?attr/colorControlNormal"
...
