...
    android:layout_width="match_parent"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <de.luhmer.owncloudnewsreader.view.PodcastSlidingUpPanelLayout
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoParallaxOffset="100dp"
        android:gravity="bottom"
        sothree:umanoShadowHeight="4dp"> <!-- sothree:dragView="@+id/name" -->
...
